add_subdirectory(test_class)

add_subdirectory(test_core)

add_subdirectory(test_key_word)

add_subdirectory(test_memory)

add_subdirectory(test_reference)

add_subdirectory(test_singleton)

add_subdirectory(test_smart_ptr)

add_subdirectory(test_stl)

add_subdirectory(test_libso)

add_subdirectory(test_struct)











